--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 .idea/
-target/*/
+target/classes/*
+target/generated-sources/*
+target/maven-archiver/*
+target/maven-status/*
+target/test-classes/*
 *.iml
-pom.xml
